--- a/client/styles/screen.styl
+++ b/client/styles/screen.styl
@@ -1,5 +1,18 @@
+body
+	font-size 18px
+	color #666
+
+a
+	text-decoration none
+	color #666
+
 .ui-topic-item
-	margin 8px
+	margin 8px 8px 16px 8px
 	padding 8px
-	border 1px solid #cdcdcd
-	background-color #efefef
+	padding-left 32px
+	// border-left 1px solid #cdcdcd
+	// border-bottom 1px solid #cdcdcd
+	border 1px solid #efefef
+
+.hide
+	display none
