--- a/client/styles/flex.styl
+++ b/client/styles/flex.styl
@@ -49,6 +49,18 @@
 
 //
 
+.ui-mgb
+	margin-bottom 16px
+
+.ui-mgr
+	margin-right 16px
+
+
+//
+
+.ui-padded-xs
+	padding 8px
+
 .ui-padded-sm
 	padding 8px
 
