--- a/client/templates/sign/sign.jade
+++ b/client/templates/sign/sign.jade
@@ -1,7 +1,7 @@
 template(name='sign')
 
-	form
+	form#signForm
 		input(type='text' placeholder='username').username
 		input(type='password' placeholder='password').password
-		input(type='button' value='signin').signin
+		input(type='submit' value='signin').signin
 		input(type='button' value='signup').signup
