--- a/client/templates/ui/layout.jade
+++ b/client/templates/ui/layout.jade
@@ -1,14 +1,5 @@
 template(name='layout')
 
-	.ui-padded
-		unless currentUser
-			+sign
-		else
-			+newTopic
-			a(href='#' onclick='Meteor.call("removeTopics")') 清空
-
-	.ui-padded
-
-		a(href='{{pathFor route="home"}}') 首页
+	+ui_header
 
 	+yield
