made some change

--- a/client/styles/screen.styl
+++ b/client/styles/screen.styl
@@ -18,9 +18,12 @@ textarea
 
 .ui-module
 	background-color white
-	border 1px solid $lightColor - 5%
 
 .ui-header
 
 	& a
 		padding 0 16px
+
+.ui-topic-item
+	padding 16px
+	border-left 1px solid #efefef
