--- a/client/templates/home/home.jade
+++ b/client/templates/home/home.jade
@@ -1,17 +1,19 @@
 template(name='home')
 
-	each topics
+	.ui-padded
 
-		.ui-flex-column.ui-mgb.ui-module
+		each topics
 
-			a.ui-flex-row.ui-padded(href='{{pathFor route="viewTopic"}}') {{title}}
+			.ui-flex-column.ui-mgb.ui-module
 
-			.ui-flex-row.ui-padded(style='padding-top: 0;')
+				a.ui-flex-row.ui-padded(href='{{pathFor route="viewTopic"}}') {{title}}
 
-				small.ui-mgr {{user.username}} 发布于 {{fromNow createdAt}}
+				.ui-flex-row.ui-padded(style='padding-top: 0;')
 
-				small.ui-mgr 节点 {{stats.topics}}
+					small.ui-mgr {{user.username}} 发布于 {{fromNow createdAt}}
 
-				small.ui-mgr 讨论 {{stats.comments}}
+					small.ui-mgr 节点 {{stats.topics}}
 
-				small.ui-mgr 浏览 {{stats.views}}
+					small.ui-mgr 讨论 {{stats.comments}}
+
+					small.ui-mgr 浏览 {{stats.views}}
