--- a/client/templates/topics/topics.jade
+++ b/client/templates/topics/topics.jade
@@ -22,7 +22,7 @@ template(name='topicItem')
 
 			small(style='margin-right: 8px; font-size: 12px; padding: 4px; border-radius: 2px; background-color: #efefef; color: #999;') 讨论 {{stats.comments}}
 
-			a(href='#' style='font-size: 12px; padding: 4px; border-radius: 2px; background-color: #efefef; color: #999;').method-new-topic.hide 回复
+			a(href='#' style='font-size: 12px; padding: 4px; border-radius: 2px; background-color: #efefef; color: #999;').method-new-topic.hide 插入节点
 
 		if $.Session.equals 'toggleForm' _id
 
